spark-operator updated

--- a/install/kustomization.yaml
+++ b/install/kustomization.yaml
@@ -24,7 +24,6 @@ resources:
 # Kubeflow Istio Resources
 - ../common/istio-1-11/kubeflow-istio-resources/base
 
-
 # Kubeflow Pipelines
 - ../apps/pipeline/upstream/env/platform-agnostic-multi-user
 # KFServing
@@ -55,3 +54,9 @@ resources:
 # KServe
 - ../contrib/kserve/kserve
 - ../contrib/kserve/models-web-app/base
+
+# Spark-operator
+- ../contrib/spark/spark-operator/crds
+- ../contrib/spark/spark-operator/spark-application-rbac
+- ../contrib/spark/spark-operator/spark-operator-install
+- ../contrib/spark/spark-operator/spark-operator-with-webhook-install
