--- a/contrib/spark/spark-operator/spark-operator-install/kustomization.yaml
+++ b/contrib/spark/spark-operator/spark-operator-install/kustomization.yaml
@@ -21,5 +21,5 @@ namespace: spark-operator
 
 resources:
   - spark-operator-rbac.yaml
-  - ../crds
+  - ../contrib/spark/spark-operator/crds
   - spark-operator.yaml
