--- a/install/kustomization.yaml
+++ b/install/kustomization.yaml
@@ -59,4 +59,4 @@ resources:
 - ../contrib/spark/spark-operator/crds
 - ../contrib/spark/spark-operator/spark-application-rbac
 - ../contrib/spark/spark-operator/spark-operator-install
-- ../contrib/spark/spark-operator/spark-operator-with-webhook-install
+#- ../contrib/spark/spark-operator/spark-operator-with-webhook-install
