--- a/common/istio-1-9/kubeflow-istio-resources/base/kf-istio-resources.yaml
+++ b/common/istio-1-9/kubeflow-istio-resources/base/kf-istio-resources.yaml
@@ -2,13 +2,26 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: kubeflow-gateway
+  namespace: kubeflow
 spec:
   selector:
     istio: ingressgateway
   servers:
-  - port:
-      number: 80
-      name: http
-      protocol: HTTP
-    hosts:
+  - hosts:
     - "*"
+    port:
+      name: http
+      number: 80
+      protocol: HTTP
+    # Upgrade HTTP to HTTPS
+    tls:
+      httpsRedirect: true
+  - hosts:
+    - "*"
+    port:
+      name: https
+      number: 443
+      protocol: HTTPS
+    tls:
+      mode: SIMPLE
+      credentialName: kubeflow-ingressgateway-certs
