--- a/common/cert-manager/kubeflow-issuer/base/kustomization.yaml
+++ b/common/cert-manager/kubeflow-issuer/base/kustomization.yaml
@@ -8,4 +8,4 @@ commonLabels:
   app.kubernetes.io/name: cert-manager
 resources:
 - cluster-issuer.yaml
-- kubeflow-issuer.yaml
+- gateways-issuer.yaml
