auth variables updated

--- a/common/oidc-authservice/base/params.env
+++ b/common/oidc-authservice/base/params.env
@@ -1,8 +1,9 @@
-OIDC_PROVIDER=http://dex.auth.svc.cluster.local:5556/dex
-OIDC_AUTH_URL=/dex/auth
-OIDC_SCOPES=profile email groups
-REDIRECT_URL=/login/oidc
-SKIP_AUTH_URI=/dex
+CLIENT_ID=e71a36ca-659a-4c30-aa96-f3437bde939a
+OIDC_PROVIDER=https://login.microsoftonline.com/8d6b80b7-89b2-4ee9-8726-5255817a287c/v2.0
+OIDC_AUTH_URL=https://login.microsoftonline.com/8d6b80b7-89b2-4ee9-8726-5255817a287c/oauth2/v2.0/authorize
+APPLICATION_SECRET=XANCbsy~Cx3gpmGityjxcM_4nacVh4MQ7f
+SKIP_AUTH_URI=
+NAMESPACE=istio-system
 USERID_HEADER=kubeflow-userid
 USERID_PREFIX=
 USERID_CLAIM=email
